tests/sksl/errors/Ossfuzz44045.glsl
### Compilation failed:

error: 1: integer is out of range for type 'int': 3976000000
error: 1: integer is out of range for type 'int': 3976000000
error: 1: array size must be an integer
3 errors
